Refactored roles management and add refresh, logout user
